# nnim

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  configure  configure.in  mkinstalldirs
BubbleBabble/: BubbleBabble.dsp  BubbleBabble.vcproj  babble.cpp  babble.h
boost/: assert.hpp  checked_delete.hpp  config.hpp  scoped_array.hpp  scoped_ptr.hpp  shared_array.hpp  shared_ptr.hpp  smart_ptr.hpp  weak_ptr.hpp
boost/config/: posix_features.hpp  select_stdlib_config.hpp  suffix.hpp
boost/detail/: algorithm.hpp  allocator.hpp  atomic_count.hpp  atomic_count_win32.hpp  iterator.hpp  lightweight_mutex.hpp  limits.hpp  lwm_linux.hpp  lwm_pthreads.hpp  lwm_win32.hpp  lwm_win32_cs.hpp  numeric_traits.hpp  ob_compressed_pair.hpp  shared_array_nmt.hpp  (+3 more)
client/: Makefile.am  Makefile.in
client/wx/: Makefile.am  Makefile.in  NConfig.h.in  PROTOCOL.txt  README  TODO.wx  configure.in  mkinstalldirs  newtoc.cpp  newtoc.h  nnim.sln  nnim.vcproj  spec.xml  wxgui.dsp  wxgui.dsw  wxgui.sln  wxgui.vcproj
client/wx/include/: NAbout.h  NAutoDict.h  NAutoTxt.h  NChat.h  NContact.h  NContactEdit.h  NContactTree.h  NContactTreeXML.h  NContactWiz.h  NDerivedClasses.h  NEvent.h  NInclude.h  NLog.h  NLogin.h  NMain.h  NNets.h  NNetworkServer.h  NPrefGen.h  NPrefNet.h  NPrefSec.h  NPrefs.h  NProtocolManager.h  NProtocol_wdr.h  NResources_wdr.h  NSocket.h  NSocketServer.h  NTaskbar.h  NTreeCtrlXML.h  NUserWiz.h  NXpms.h
client/wx/src/: Makefile.am  Makefile.in  NAbout.cpp  NAutoTxt.cpp  NChat.cpp  NContact.cpp  NContactEdit.cpp  NContactTree.cpp  NContactTreeXML.cpp  NContactWiz.cpp  NEvent.cpp  NLog.cpp  NLogin.cpp  NMain.cpp  NPrefGen.cpp  NPrefNet.cpp  NPrefSec.cpp  NPrefs.cpp  NProtocolManager.cpp  NProtocol_wdr.cpp  NSocket.cpp  NSocketServer.cpp  NTaskbar.cpp  NTreeCtrlXML.cpp  NUserWiz.cpp  NWizards_wdr.cpp  NWizards_wdr.h  wizards.wdr  wxgui_wdr.xrc
client/wx/src/bitmaps/: a_wing.xpm  at_at.xpm  at_st.xpm  away.xpm  bird16x16-offline.xpm  bird16x16.xpm  bird32x32.xpm  button.xpm  close.xpm  config.xpm  connecting16x16.xpm  darth.xpm  dnd.xpm  down16x16-grey.xpm  down16x16.xpm  dstar_inc.xpm  falcon.xpm  ffc.xpm  icq.xpm  imp_shuttle.xpm  kit.xpm  left.xpm  lockclosed.xpm  lockopen.xpm  na.xpm  nnim_button_trans.xpm  nnim_button_trans2.xpm  nnim_button_trans_bw.xpm  nnim_button_trans_bw2.xpm  nnim_i.xpm  nnim_logo.xpm  nnim_logo_beta11.xpm  nnim_logo_botch.xpm  nnim_logo_smaller.xpm  nnim_logo_trans.xpm  occupied.xpm  offline.xpm  offline16x16.xpm  online.xpm  online1.xpm  (+12 more)
client/wx/src/bitmaps/extra/: away.xpm  chat.xpm  dnd.xpm  glade-add-group-menu.xpm  glade-alert.xpm  glade-blank.xpm  glade-contact.xpm  glade-delete-user-menu.xpm  glade-delete-user.xpm  glade-edit-group-menu.xpm  glade-edit-user-menu.xpm  glade-edit-user.xpm  glade-gci.xpm  glade-groupchat-menu.xpm  glade-groupchat.xpm  glade-message.xpm  glade-new-user-menu.xpm  glade-new-user.xpm  glade-noclose.xpm  glade-ooochat.xpm  glade-s10n.xpm  glade-send-contact-menu.xpm  glade-send-gci.xpm  glade-sendasnormal.xpm  glade-sendasooo.xpm  glade-unlock-key.xpm  glade-users.xpm  gnome-editgroups.xpm  gnome-gabber.xpm  gnome-gpg.xpm  gnome-groupchat.xpm  gnome-message.xpm  gnome-ooochat.xpm  gnome-s10n.xpm  gnome-userinfo.xpm  gpg-badsigned.xpm  gpg-encrypted.xpm  gpg-signed.xpm  gpg-unencrypted.xpm  gpg-unsigned.xpm  (+5 more)
client/wx/src/vc/: resource.rc
client/wx/src/wdr/: NProtocol.wdr  NWizards.wdr
client/wx/src/windows/: NAbout.cpp  NChat.cpp  NContact.cpp  NContactEdit.cpp  NContactTree.cpp  NContactTreeXML.cpp  NLog.cpp  NLogin.cpp  NNets.cpp  NPrefGen.cpp  NPrefNet.cpp  NPrefSec.cpp  NPrefs.cpp  NResources_wdr.cpp  NTaskbar.cpp
client/wx/src/wizards/: NContactWiz.cpp  NUserWiz.cpp
crypto/: GNUmakefile  Makefile.am  Makefile.in  README.txt  adler32.cpp  adler32.h  algebra.cpp  bench.cpp  cbcmac.h  config.h  crc.cpp  crc.h  cryptest.ncb  cryptlib.dsp  cryptlib.dsw  cryptlib.h  cryptlib.sln  cryptlib.vcproj  dmac.h  ec2n.cpp  ec2n.h  eccrypto.cpp  ecp.cpp  ecp.h  eprecomp.cpp  filters.h  gzip.cpp  gzip.h  haval.cpp  haval.h  hrtimer.cpp  ida.cpp  integer.cpp  md2.cpp  md2.h  md4.cpp  md4.h  md5.h  md5mac.cpp  md5mac.h  (+29 more)
lib/: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  THANKS  XMLSpec.xml  acconfig.h  aclocal.m4  configure.in  gm_config.h  gm_config.h.in  libGM.dsp  libGM.dsw  libGM.sln  libGM.vcproj  mkinstalldirs
lib/certificates/: Makefile.am  Makefile.in  dstring.h  gmstorage.cpp  securecomm.cpp  sign.cpp
lib/common/: Makefile.am  Makefile.in  auth_contact.cpp  auth_global.cpp  auth_user.cpp  authload.cpp  contact.cpp  cryptography.cpp  expat.cpp  log.cpp  ssh.cpp  test.cpp  xml.cpp  xmlnode.cpp
lib/common/expat/: Makefile.am  Makefile.in  xmlparse.c
lib/include/: WString.h  authload.h  basenetwork.h  buffer.hpp  contact.h  cryptography.h  dstring.h  expat.h  globals.h  gmException.h  gmstorage.h  icqprotocol.h  kitprotocol.h  log.h  manager.h  msnprotocol.h  nnimprotocol.h  peerprotocol.h  platform.h  protocol.h  securecomm.h  sign.h  ssh.h  tocprotocol.h  xml.h  xmlnode.h  yahooprotocol.h
lib/protocol/: Makefile.am  Makefile.in  emptyprotocol.cpp  emptyprotocol.h  kitprotocol.cpp  manager.cpp  nnimprotocol.cpp  old_tocprotocol.cpp  peerprotocol.cpp  protocol.cpp  protocol.dsp  tocprotocol.cpp  yahooprotocol.cpp
lib/protocol/icq/: Makefile.am  Makefile.in  fnacbospackets.cpp  fnacbudpackets.cpp  fnacbudpackets.h  fnacgenpackets.cpp  fnacgenpackets.h  fnacicqpackets.cpp  fnacicqpackets.h  fnaclocpackets.cpp  fnaclocpackets.h  fnacmsgpackets.cpp  fnacmsgpackets.h  fnacpacket.cpp  fnacpacket.h  iceq.h  icqprotocol.cpp  packet.cpp  packet.h  packets.cpp  packets.h  parsefnac.cpp  parsefnacbos.cpp  parsefnacbud.cpp  parsefnacgen.cpp  parsefnacicq.cpp  parsefnacloc.cpp  parsefnacmsg.cpp  parsepacket.cpp  stdpackets.cpp  stdpackets.h  util.cpp  util.h  v7protocol.h
lib/protocol/msn/: Makefile.am  Makefile.in  command.h  errors.h  msnprotocol.cpp
sshlib/: ReleaseNotes.txt  ssh.cpp  ssh.h  sshlib-design.txt  sshlib.dsp  sshlib.vcproj  sshwin.cpp  sshwin.h
(+22 files in other folders)
