EXTRA_DIST = test.cpp validate1.cpp validate2.cpp validate3.cpp \
	LICENSE.txt README.txt
CXXFLAGS= -g
LDFLAGS = -Wl,--gc-sections
INCLUDES = -I.

lib_LIBRARIES = libcryptopp.a
libcryptopp_a_SOURCES = \
3way.cpp \
3way.h \
adler32.cpp \
adler32.h \
aes.h \
algebra.cpp \
algebra.h \
arc4.cpp \
arc4.h \
asn.cpp \
asn.h \
base64.cpp \
base64.h \
bfinit.cpp \
blowfish.cpp \
blowfish.h \
blumgold.cpp \
blumgold.h \
blumshub.cpp \
blumshub.h \
cast.cpp \
cast.h \
casts.cpp \
cbc.cpp \
cbc.h \
cbcmac.h \
channels.cpp \
channels.h \
config.h \
crc.cpp \
crc.h \
cryptlib.cpp \
cryptlib.h \
default.cpp \
default.h \
des.cpp \
des.h \
dessp.cpp \
dh2.cpp \
dh2.h \
dh.cpp \
dh.h \
diamond.cpp \
diamond.h \
diamondt.cpp \
dmac.h \
dsa.cpp \
dsa.h \
ec2n.cpp \
ec2n.h \
eccrypto.cpp \
eccrypto.h \
ecp.cpp \
ecp.h \
elgamal.cpp \
elgamal.h \
eprecomp.cpp \
eprecomp.h \
files.cpp \
files.h \
filters.cpp \
filters.h \
gf2_32.cpp \
gf2_32.h \
gf256.cpp \
gf256.h \
gf2n.cpp \
gf2n.h \
gost.cpp \
gost.h \
gzip.cpp \
gzip.h \
hex.cpp \
hex.h \
hmac.h \
hrtimer.cpp \
hrtimer.h \
ida.cpp \
ida.h \
idea.cpp \
idea.h \
integer.cpp \
integer.h \
iterhash.cpp \
iterhash.h \
lubyrack.h \
luc.cpp \
luc.h \
mars.cpp \
mars.h \
marss.cpp \
md2.cpp \
md2.h \
md4.cpp \
md4.h \
md5.cpp \
md5.h \
md5mac.cpp \
md5mac.h \
mdc.h \
misc.cpp \
misc.h \
modarith.h \
modes.cpp \
modes.h \
modexppc.cpp \
modexppc.h \
mqueue.cpp \
mqueue.h \
mqv.cpp \
mqv.h \
nbtheory.cpp \
nbtheory.h \
network.cpp \
network.h \
nr.cpp \
nr.h \
oaep.cpp \
oaep.h \
oids.h \
osrng.cpp \
osrng.h \
panama.cpp \
panama.h \
pch.cpp \
pch.h \
pkcspad.cpp \
pkcspad.h \
polynomi.cpp \
polynomi.h \
pssr.h \
pubkey.cpp \
pubkey.h \
queue.cpp \
queue.h \
rabin.cpp \
rabin.h \
randpool.cpp \
randpool.h \
rc2.cpp \
rc2.h \
rc5.cpp \
rc5.h \
rc6.cpp \
rc6.h \
rdtables.cpp \
rijndael.cpp \
rijndael.h \
ripemd.cpp \
ripemd.h \
rng.cpp \
rng.h \
rsa.cpp \
rsa.h \
rw.cpp \
rw.h \
safer.cpp \
safer.h \
sapphire.cpp \
sapphire.h \
seal.cpp \
seal.h \
secshare.cpp \
secshare.h \
serpent.cpp \
serpent.h \
sha.cpp \
sha.h \
sharkbox.cpp \
shark.cpp \
shark.h \
skipjack.cpp \
skipjack.h \
smartptr.h \
socketft.cpp \
socketft.h \
square.cpp \
square.h \
squaretb.cpp \
tea.cpp \
tea.h \
tftables.cpp \
tiger.cpp \
tiger.h \
tigertab.cpp \
trunhash.h \
twofish.cpp \
twofish.h \
wake.cpp \
wake.h \
winpipes.cpp \
winpipes.h \
words.h \
xormac.h \
xtr.cpp \
xtrcrypt.cpp \
xtrcrypt.h \
xtr.h \
zdeflate.cpp \
zdeflate.h \
zinflate.cpp \
zinflate.h \
zlib.cpp \
zlib.h
