INCLUDES = -I. -I../include -I../../
SUBDIRS = msn icq
noinst_LTLIBRARIES = libprotocol.la
libprotocol_la_SOURCES =  kitprotocol.cpp nnimprotocol.cpp \
	manager.cpp protocol.cpp tocprotocol.cpp yahooprotocol.cpp \
	peerprotocol.cpp

EXTRA_DIST =  emptyprotocol.h old_tocprotocol.cpp emptyprotocol.cpp
