INCLUDES = -I. -I../../include -I../../../ -I../
noinst_LIBRARIES = libicq.a
libicq_a_SOURCES = fnacbospackets.cpp \
	fnacbudpackets.cpp \
	fnacbudpackets.h \
	fnacgenpackets.cpp \
	fnacgenpackets.h \
	fnacicqpackets.cpp \
	fnacicqpackets.h \
	fnaclocpackets.cpp \
	fnaclocpackets.h \
	fnacmsgpackets.cpp \
	fnacmsgpackets.h \
	fnacpacket.cpp \
	fnacpacket.h \
	iceq.h \
	icqprotocol.cpp \
	packet.cpp \
	packet.h \
	packets.cpp \
	packets.h \
	parsefnacbos.cpp \
	parsefnacbud.cpp \
	parsefnac.cpp \
	parsefnacgen.cpp \
	parsefnacicq.cpp \
	parsefnacmsg.cpp \
	parsepacket.cpp \
	stdpackets.cpp \
	stdpackets.h \
	util.cpp \
	util.h \
	v7protocol.h
