INCLUDES = -I. -I../../include -I../../../ -I../
noinst_LTLIBRARIES = libicq.la
libicq_la_SOURCES = fnacbospackets.cpp \
	fnacbudpackets.cpp \
	fnacbudpackets.h \
	fnacgenpackets.cpp \
	fnacgenpackets.h \
	fnacicqpackets.cpp \
	fnacicqpackets.h \
	fnaclocpackets.cpp \
	fnaclocpackets.h \
	fnacmsgpackets.cpp \
	fnacmsgpackets.h \
	fnacpacket.cpp \
	fnacpacket.h \
	iceq.h \
	icqprotocol.cpp \
	packet.cpp \
	packet.h \
	packets.cpp \
	packets.h \
	parsefnacbos.cpp \
	parsefnacbud.cpp \
	parsefnac.cpp \
	parsefnacgen.cpp \
	parsefnacicq.cpp \
	parsefnacmsg.cpp \
    parsefnacloc.cpp \
	parsepacket.cpp \
	stdpackets.cpp \
	stdpackets.h \
	util.cpp \
	util.h \
	v7protocol.h
